# config/openapi.json
@@ -36,17 +36,15 @@
         },
         "/card/on-site/{cardId}": {
             "get": {
-                "parameters": [
-                    {
-                        "name": "cardId",
-                        "in": "path",
-                        "description": "The cardId to retrieve the status for.",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
+                "parameters": [{
+                    "name": "cardId",
+                    "in": "path",
+                    "description": "The cardId to retrieve the status for.",
+                    "required": true,
+                    "schema": {
+                        "type": "string"
                     }
-                ],
+                }],
                 "responses": {
                     "200": {
                         "description": "200 response",
@@ -63,7 +61,7 @@
                             }
                         }
                     }
-                },                
+                },
                 "x-amazon-apigateway-integration": {
                     "uri": "arn:aws:apigateway:(REGION):lambda:path/2015-03-31/functions/arn:aws:lambda:(REGION):(ACCOUNT_ID):function:(FUNCTION_NAME)/invocations",
                     "responses": {
@@ -96,7 +94,7 @@
                             }
                         }
                     }
-                },                
+                },
                 "x-amazon-apigateway-integration": {
                     "uri": "arn:aws:apigateway:(REGION):lambda:path/2015-03-31/functions/arn:aws:lambda:(REGION):(ACCOUNT_ID):function:(FUNCTION_NAME)/invocations",
                     "responses": {
@@ -129,7 +127,7 @@
                             }
                         }
                     }
-                },                
+                },
                 "x-amazon-apigateway-integration": {
                     "uri": "arn:aws:apigateway:(REGION):lambda:path/2015-03-31/functions/arn:aws:lambda:(REGION):(ACCOUNT_ID):function:(FUNCTION_NAME)/invocations",
                     "responses": {
@@ -162,7 +160,115 @@
                             }
                         }
                     }
-                },                
+                },
+                "x-amazon-apigateway-integration": {
+                    "uri": "arn:aws:apigateway:(REGION):lambda:path/2015-03-31/functions/arn:aws:lambda:(REGION):(ACCOUNT_ID):function:(FUNCTION_NAME)/invocations",
+                    "responses": {
+                        "default": {
+                            "statusCode": "200"
+                        }
+                    },
+                    "passthroughBehavior": "when_no_match",
+                    "httpMethod": "POST",
+                    "contentHandling": "CONVERT_TO_TEXT",
+                    "type": "aws_proxy"
+                }
+            }
+        },
+        "/staff": {
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "200 response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "x-amazon-apigateway-integration": {
+                    "uri": "arn:aws:apigateway:(REGION):lambda:path/2015-03-31/functions/arn:aws:lambda:(REGION):(ACCOUNT_ID):function:(FUNCTION_NAME)/invocations",
+                    "responses": {
+                        "default": {
+                            "statusCode": "200"
+                        }
+                    },
+                    "passthroughBehavior": "when_no_match",
+                    "httpMethod": "POST",
+                    "contentHandling": "CONVERT_TO_TEXT",
+                    "type": "aws_proxy"
+                }
+            }
+        },
+        "/staff/on-site": {
+            "get": {
+                "responses": {
+                    "200": {
+                        "description": "200 response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "x-amazon-apigateway-integration": {
+                    "uri": "arn:aws:apigateway:(REGION):lambda:path/2015-03-31/functions/arn:aws:lambda:(REGION):(ACCOUNT_ID):function:(FUNCTION_NAME)/invocations",
+                    "responses": {
+                        "default": {
+                            "statusCode": "200"
+                        }
+                    },
+                    "passthroughBehavior": "when_no_match",
+                    "httpMethod": "POST",
+                    "contentHandling": "CONVERT_TO_TEXT",
+                    "type": "aws_proxy"
+                }
+            }
+        },
+        "/staff/{staffId}": {
+            "get": {
+                "parameters": [{
+                    "name": "staffId",
+                    "in": "path",
+                    "description": "The staffId to retrieve the data for.",
+                    "required": true,
+                    "schema": {
+                        "type": "string"
+                    }
+                }],
+                "responses": {
+                    "200": {
+                        "description": "200 response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
                 "x-amazon-apigateway-integration": {
                     "uri": "arn:aws:apigateway:(REGION):lambda:path/2015-03-31/functions/arn:aws:lambda:(REGION):(ACCOUNT_ID):function:(FUNCTION_NAME)/invocations",
                     "responses": {
@@ -180,17 +286,11 @@
     },
     "x-amazon-apigateway-policy": {
         "Version": "2012-10-17",
-        "Statement": [
-            {
-                "Effect": "Allow",
-                "Principal": "*",
-                "Action": [
-                    "execute-api:GET",
-                    "execute-api:Invoke",
-                    "execute-api:POST"
-                ],
-                "Resource": "arn:aws:execute-api:(REGION):(ACCOUNT_ID):*"
-            }
-        ]
+        "Statement": [{
+            "Effect": "Allow",
+            "Principal": "*",
+            "Action": ["execute-api:GET", "execute-api:Invoke", "execute-api:POST"],
+            "Resource": "arn:aws:execute-api:(REGION):(ACCOUNT_ID):*"
+        }]
     }
 }
